test and release workflow added

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@palmyralabs/ts-utils",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.0.1",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -16,10 +16,10 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "tsc --p ./tsconfig.json && vite --config vite.config.js build",
+    "build": "npm run test && tsc --p ./tsconfig.json && vite --config vite.config.js build",
     "preview": "vite preview",
     "prepublishOnly": "npm run build",
-    "test": "jest"
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
@@ -27,7 +27,8 @@
     "serve-static": "^1.15.0",
     "typescript": "^5.5.2",
     "vite": "^5.3.5",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "^3.9.1",
+    "vitest": "^2.0.5"
   },
   "dependencies": {
     "dayjs": "^1.11.12",
